[package]
name = "fcbf"
version = "0.1.0"
authors = ["Simon Vandel Sillesen <simon.vandel@gmail.com>"]

[dependencies]
ndarray = "0.11"
csv = "1.0.0-beta.5"
ordered-float = "0.5"
noisy_float = "0.1"
indexmap = "1.0"
num-traits = "0.2"
fnv = "1"

[dev-dependencies]
quickcheck = "0.6"
float-cmp = "0.4"

[profile.release]
debug = true